src/test/ui/resolve/unresolved_static_type_field.stderr
error[E0425]: unresolved name `cx`
  --> $DIR/unresolved_static_type_field.rs:19:11
   |
19 |         f(cx);
   |           ^^ unresolved name
   |
   = help: this is an associated function, you don't have access to this type's fields or methods

error: aborting due to previous error

